--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,21 @@
 baseURL = "http://example.org/"
 languageCode = "fr-fr"
 title = "Les Bières de Yannick"
+theme = "themeDeYannick"
+
+[menu]
+  [[menu.main]]
+    name = "Accueil"
+    pre = "home"
+    url = "/"
+    weight = 1
+  [[menu.main]]
+    name = "Posts"
+    pre = "pen-tool"
+    url = "/posts/"
+    weight = 2
+  [[menu.main]]
+    name = "Tags"
+    pre = "tag"
+    url = "/tags/"
+    weight = 3
