WIP adding some content

--- a/config.toml
+++ b/config.toml
@@ -14,12 +14,22 @@ publishDir = "docs"
     url = "/"
     weight = 1
   [[menu.main]]
-    name = "Posts"
+    name = "Bières"
+    pre = "smile"
+    url = "/bieres/"
+    weight = 2
+  [[menu.main]]
+    name = "Brassage"
+    pre = "tool"
+    url = "/brassage/"
+    weight = 3
+  [[menu.main]]
+    name = "Blog"
     pre = "pen-tool"
     url = "/posts/"
-    weight = 2
+    weight = 4
   [[menu.main]]
     name = "Tags"
     pre = "tag"
     url = "/tags/"
-    weight = 3
+    weight = 5
