--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ pluralizelisttitles = false
 [params]
   welcome = "Brassage maison et références obscures"
   icon = "beer"
+  moreText = "(suite...)"
 
 [menu]
   [[menu.main]]
